entity_macros/tests/ui/derive/ent/duplicate-created.stderr
error: Already have a created timestamp elsewhere
  --> $DIR/duplicate-created.rs:15:5
   |
15 |     created2: u64,
   |     ^^^^^^^^
